All_Component_DX/force-app/main/default/objects/Product_Stock__c/Product_Stock__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Product stock is used to store inventory information for a product in a given location and status along with reorder information.</description>
    <label>Product Stock</label>
    <nameField>
        <displayFormat>STK-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Stock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>