All_Component_DX/force-app/main/default/objects/Product_Stock__c/fields/ActualQtyBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>ActualQtyBeforeUpdate__c</fullName>
    <description>This field used internally by ServiceMax. This field is being calculated by inventory engine to stop simultaneous update of records.</description>
    <inlineHelpText>This field used internally by ServiceMax. This field is being calculated by inventory engine to stop simultaneous update of records.</inlineHelpText>
    <label>Actual Quantity Before Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>