All_Component_DX/force-app/main/default/objects/Product_Stock__c/fields/Available_Qty__c.field-meta.xml
<CustomField>
    <fullName>Available_Qty__c</fullName>
    <formula>if((Quantity2__c -  Allocated_Qty__c) &gt; 0, (Quantity2__c -  Allocated_Qty__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Qty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>