All_Component_DX/force-app/main/default/objects/Product_Stock__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact, set by trigger.</description>
    <inlineHelpText>Lookup to Partner Contact.</inlineHelpText>
    <label>Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Stock</relationshipLabel>
    <relationshipName>Product_Stock</relationshipName>
    <type>Lookup</type>
</CustomField>