All_Component_DX/force-app/main/default/objects/Product_Stock__c/fields/ProdStockCompositeKey__c.field-meta.xml
<CustomField>
    <fullName>ProdStockCompositeKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is combination of Product, Location and Status field to make the record unique.</description>
    <inlineHelpText>This field is combination of Product, Location and Status field to make the record unique.</inlineHelpText>
    <label>Composite Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>