All_Component_DX/force-app/main/default/objects/Product_Stock__c/fields/Reorder_Level2__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Level2__c</fullName>
    <description>Reorder level of this product for the provided location.</description>
    <inlineHelpText>Reorder level of this product for the provided location.</inlineHelpText>
    <label>Reorder Point</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>