All_Component_DX/force-app/main/default/objects/Product_Stock__c/fields/Reorder_Quantity2__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Quantity2__c</fullName>
    <description>Reorder quantity for the provided product and location when reorder level is reached</description>
    <inlineHelpText>Reorder quantity for the provided product and location when reorder level is reached</inlineHelpText>
    <label>Reorder Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>