All_Component_DX/force-app/main/default/objects/Product_Stock__c/fields/Stock_Value__c.field-meta.xml
<CustomField>
    <fullName>Stock_Value__c</fullName>
    <description>Value of current stock. Used for reporting purposes.</description>
    <formula>Quantity2__c *  Product_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value of current stock. Used for reporting purposes.</inlineHelpText>
    <label>Stock Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>